# d3d12-beginner

./: .gitignore  README.md
00-open-win32-window/: CMakeLists.txt  d3d12_01.pro  dx12.pro  main.cpp  pch.h
01-initialize-dx12/: CMakeLists.txt  dx12.pro  main.cpp  pch.h
02-first-triangle/: CMakeLists.txt  debug.h  main.cpp  main.pro
03-frame-timer/: CMakeLists.txt  main.cpp  shaders.hlsl  timer.h
04-constant-buffer/: CMakeLists.txt  main.cpp  shaders.hlsl
05-mesh-camera/: CMakeLists.txt  debug.h  main.cpp  pch.h
06-gpu-work-submission/: CMakeLists.txt  main.cpp  pch.h  shaders.hlsl
a0-first-triangle-ray-tracing/: CMakeLists.txt  RayGen.hlsl  a0.pro  debug.h  deploy.bat  main.cpp  main.pro  pch.h  shader.h
a0-first-triangle-ray-tracing/nv_helpers_dx12/: BottomLevelASGenerator.cpp  RaytracingPipelineGenerator.cpp  RootSignatureGenerator.cpp  ShaderBindingTableGenerator.cpp
x0-debug-render/: main.cpp
x0-multiple-targets/: main.cpp  pch.h
z0-playground/: main.cpp  shaders.hlsl
